added all items

--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
     </div>
 
   </section>
+  <!-- super client -->
+  <section class="my-24">
+    <div>
+      <h2 class="text-5xl font-extrabold">
+        
+      </h2>
+    </div>
+    
+  </section>
     </main>
     <footer>
 
